2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/test_mpegts.py:
	Check keyframe counter, and keyframe interval.

2009-12-18  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/test/Makefile.am:
	* flumotion/test/test_mpegts.py (added):
	Added simple mpegts-mux component test.
	* flumotion/test/test_component.py (deleted):
	* flumotion/test/test_hls_ring.py:
	Renamed file to match test name.

2009-12-18  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/test/test_component.py (added):
	Added test suite for the HLSRing

2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Do not add duplicated fragments to the ring

2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Add bandwidth attribute to the stream info in the main playlist

2009-12-17  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	Remove unused setter and make 'hostname' private

2009-12-16  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/common.py:
	* flumotion/component/consumers/httpfragstreamer/hlsring.py:
	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py:
	* flumotion/component/consumers/httpfragstreamer/mpegtssegmenter.py:
	* flumotion/component/consumers/httpfragstreamer/resources.py:
	* flumotion/component/muxers/mpegts/mpegts.py:
	* flumotion/test/test_dummy.py:
	Fix pep8

2009-12-16  Marc-André Lureau  <mlureau@flumotion.com>

	* flumotion/component/muxers/mpegts/Makefile.am:
	* flumotion/component/muxers/mpegts/mpegts.xml:
	* flumotion/component/muxers/mpegts/keyframescounter.py (deleted):
	Remove unused keyframescounter.py.

2009-12-16  Andoni Morales Alastruey  <amorales@flumotion.com>

	* flumotion/component/consumers/httpfragstreamer/httpfragstreamer.py: