@@ -1,0 +1,19 @@
+<registry>
+  <components>
+   
+    <component type="mpegts-tester" base="flumotion/test"
+               _description="Test mpegts-muxer">
+      <source location="flumotion.test.test_mpegts"/>
+      
+      <eater name="default" multiple="yes"/>
+      
+      <entries>
+        <entry type="component" location="test_mpegts.py"
+               function="MPEGTSTester"/>
+      </entries>
+
+    </component>
+
+  </components>
+
+</registry>
